# moonboard-search

./: .env.example  .gitignore  README.md  moonboard.db  pyproject.toml  requirements.txt  vercel.json  wsgi.py
docs/superpowers/specs/: 2026-06-29-moonboard-2024-hold-search-design.md
moonboard_search/: __init__.py  db.py  schema.sql
moonboard_search/scraper/: auth.py  client.py  sync.py
moonboard_search/web/: app.py  search.py
moonboard_search/web/static/: board.css  board.js
moonboard_search/web/templates/: board.html
tests/: test_app.py  test_auth.py  test_client.py  test_db.py  test_search.py  test_sync.py
