[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "moonboard-search"
version = "0.1.0"
description = "Scrape MoonBoard 2024 problems and search climbs by hold"
requires-python = ">=3.11"
dependencies = ["requests>=2.31", "Flask>=3.0", "python-dotenv>=1.0"]

[tool.setuptools.packages.find]
include = ["moonboard_search*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
